<resources>
    <string name="app_name">BarBulance</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_events">Events</string>
    <string name="title_rides">Rides</string>
    <string name="title_user">User</string>
    <string name="facebook_app_id">432319980789529</string>
    <string name="fb_login_protocol_scheme">fb432319980789529</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_event">Add New Event</string>
    <string name="add_ride">Add New Ride</string>
    <string name="sample_text">Sample</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="until">Until:</string>
    <string name="textview">TextView</string>
    <string name="person">person</string>
    <string name="location">Location</string>
    <string name="call">call</string>
    <string name="add">add</string>
    <string name="ambulance">ambulance</string>
    <string name="home">home</string>
    <string name="animal_type">Animal type</string>
    <string name="required">Required</string>
    <string name="pickup">pickup</string>
    <string name="foster">foster</string>
    <string name="nonurgent">nonurgent</string>
    <string name="urgent">Urgent</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="description_optional">Description (optional)</string>
    <string name="Lombok"><a href="https://github.com/rzwitserloot/lombok/blob/master/LICENSE/">Link</a></string>
    <string name="MaterialDesign"><a href="https://github.com/Templarian/MaterialDesign/blob/master/LICENSE/">Link</a></string>
    <string name="freepikcompany"><a href="https://www.freepikcompany.com/legal#nav-flaticon/">Link</a></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add_emergency_event">Add Emergency Event</string>
    <string name="chat">Chat</string>
    <string name="app_description">Barbulance is an application for animal lovers who wish to report the location and condition of injured wild animals and, if possible, offer transportation to veterinary clinics.\nVolunteers can get notifications about injured wild animals, open new calls to inform the other volunteers and the clinics, and volunteer to provide transportation.\nApp managers will be in charge of volunteers, be able to edit incident reports, manage issues of endangered species and more.\nIn addition, the volunteers will be able to offer their regularly travelled routes and spontaneous trips to transport animals if needed.</string>
    <string name="developers">Lilit Yenokyan, Dani Ginsberg &amp; Almog Brand</string>
    <string name="credits_graphic_designer"><a href="https://www.instagram.com/hadas_cohen_art/">Hadas Cohen Graphic Designer</a></string>
    <string name="terms_and_conditions"><a href="https://drive.google.com/open?id=1ltqBoesiGGdJzDELnN6xiPKTmhzjwYxQ">Terms and Conditions</a></string>
    <string name="privacy_policy"><a href="https://drive.google.com/open?id=1eXcnTxZybJUCrKUYNX9Md-yOFhMUdXkH">Privacy Policy</a></string>
    <string name="open_source_licences"><a href="https://github.com/Technion236503/2020a-BarBulance/blob/master/README.md">Open Source Licences</a></string>
    <string name="title_additional_information">Additional Information</string>
    <string name="title_credits_and_thanks">Credits and thanks to</string>
    <string name="title_developed_by">Developed By</string>
    <string name="title_about_the_app">About The App</string>
</resources>
