<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="?attr/selectableItemBackground" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fosterImageView"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/fosterPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fosterImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/fosterLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="7dp"
        android:maxLines="1"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fosterLocationLogo"
        app:layout_constraintVertical_weight="3" />

    <ImageView
        android:id="@+id/fosterTimeLogo"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:tint="@color/colorSecondaryText"
        app:layout_constraintStart_toEndOf="@+id/fosterUntil"
        app:layout_constraintTop_toBottomOf="@+id/fosterPerson"
        app:srcCompat="@drawable/clock_outline" />

    <ImageView
        android:id="@+id/fosterLocationLogo"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/location"
        android:tint="@color/colorSecondaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fosterImageView"
        app:srcCompat="@drawable/map_marker" />

    <TextView
        android:id="@+id/fosterTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fosterTimeLogo"
        app:layout_constraintTop_toBottomOf="@+id/fosterPerson"
        app:layout_constraintVertical_weight="3" />

    <ImageView
        android:id="@+id/fosterDateLogo"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:tint="@color/colorSecondaryText"
        app:layout_constraintStart_toEndOf="@+id/fosterTime"
        app:layout_constraintTop_toBottomOf="@+id/fosterPerson"
        app:srcCompat="@drawable/calendar" />

    <TextView
        android:id="@+id/fosterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fosterDateLogo"
        app:layout_constraintTop_toBottomOf="@+id/fosterPerson"
        app:layout_constraintVertical_weight="3" />

    <TextView
        android:id="@+id/fosterUntil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="6dp"
        android:text="@string/until"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/fosterImageView"
        app:layout_constraintTop_toBottomOf="@+id/fosterPerson" />

</androidx.constraintlayout.widget.ConstraintLayout>